# Touhou-NovelRT

./: CMakeLists.txt  README.md
include/: TouhouNovelRT.h
include/Bullets/: BossSpellcard.h  BossSpellcardBulletStageData.h  Bullet.h  BulletFactory.h  BulletInstanceConfig.h  BulletWaveData.h  Emitter.h  MarisaSpellcard.h  PlayerSpellcard.h  ReimuSpellcard.h
include/Enemy/: BossEnemy.h
include/Player/: Controller.h  Gun.h  MovementState.h
include/SceneGraph/: PlayerNode.h  SimpleScene.h
include/World/: Scene.h
scripts/: build.ps1  build.sh
src/: CMakeLists.txt  main.cpp
src/Bullets/: BossSpellcard.cpp  BossSpellcardBulletStageData.cpp  Bullet.cpp  BulletFactory.cpp  BulletInstanceConfig.cpp  BulletWaveData.cpp  Emitter.cpp  MarisaSpellcard.cpp  PlayerSpellcard.cpp  ReimuSpellcard.cpp
src/Enemy/: BossEnemy.cpp
src/Player/: Controller.cpp  Gun.cpp
src/SceneGraph/: SimpleScene.cpp
src/World/: Scene.cpp
